[feat] 세션주기 다시 추가, 메인 페이지 머지 수정

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -192,6 +192,7 @@ div.swiper-wrapper {
     width: 950px;
     padding: 0;
     margin-left: 15px;
+}
 
 li{
     list-style: none;
@@ -202,7 +203,7 @@ div.tr-tit-box{
     display: grid;
     grid-template-columns: 850px 100px ;
 }
-div.fd-cont-box{
+div.tr-cont-box{
     margin-left: 5px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr ;
