[Feat,Design] 10-14 5:00 PM - MainPage 1. '요즘 뜨는 카페' db연결 완료 2. '지역별 카페 리스트' slide 완료

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -5,17 +5,6 @@
     font-style: normal;
 }
 
-body * {
-    font-family: 'GangwonEdu_OTFBoldA';
-    color: #664400;
-    font-size: 20px;
-}
-
-.main-page-container div {
-    border: 1px solid gray;
-    min-height: 20px;
-}
-
 .main-page-container {
     display: grid;
     width: 950px;
@@ -28,7 +17,6 @@ body * {
     margin: 0 auto;
     text-align: left;
 }
-
 
 .cf-best-container {
     margin-top: 30px;
@@ -86,18 +74,19 @@ body * {
 }
 
 
-div.cf-info .cf-lk-box::after {
-    top: 4px;
-    left: 5px;
-    width: 1px;
-    height: 12px;
-    background-color: #664400;
+div.cf-info span::after {
+    content: "|";
+    color: #664400;
+    opacity: 0.2;
 }
 
 i {
     font-style: normal;
 }
 
+span.cf-star-box > i {
+    margin-left: -3px;
+}
 
 .cf-img-box {
     height: 368px;
@@ -126,12 +115,18 @@ ul.swiper-wrapper li {
     list-style: none;
 }
 
+.cf-card {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
 p.cf-txt {
+    margin-top: 16px;
     word-wrap: break-word;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    height: 72px;
 }
 
 .swiper-pagination-bullet {
@@ -140,6 +135,12 @@ p.cf-txt {
 
 .swiper-pagination-bullet-active {
     background-color: #664400 !important;
+}
+
+.loc-container {
+    display: flex;
+    align-items: center;
+
 }
 
 .quick-search {
@@ -300,7 +301,7 @@ div.fd-txt-area:hover {
 
 .fdi-nm {
     width: 100%;
-    height: 194px;
+    height: 250px;
     border-radius: 4px;
     background: 50% 50% no-repeat;
     background-size: cover;
