[Design] (노유선) 메인 투어모집,커뮤니티 hover추가

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -203,7 +203,7 @@ li{
 /*tr-container*/
 div.tr-tit-box{
     display: grid;
-    grid-template-columns: 850px 100px ;
+    grid-template-columns: 900px 50px ;
 }
 span.tr-tit{
     padding: 0 30px 0 0;
@@ -212,6 +212,7 @@ span.tr-tit{
 span.tr-more-box{
     margin-top: 40px;
     margin-bottom: 20px;
+    text-align: right;
 }
 a.tr-more{
     color:gray;
@@ -231,10 +232,10 @@ div.tr-card {
 div.tri-card {
     width: 300px;
     overflow: hidden;
-    opacity: 0.8;
+    opacity: 0.7;
     background: 50% 50% no-repeat;
     padding: 10px 10px 10px 10px ;
-    height: 200px;
+    height: 270px;
     display: grid;
     grid-template-columns: 5fr 1fr ;
 }
@@ -268,7 +269,7 @@ span.tr-cont-tw-r{
 }
 .tr-cont-loc{
     color: black;
-    font-size: 15px;
+    font-size: 1.2rem;
     opacity: 1;
 }
 .tr-cont-loc i{
@@ -311,12 +312,17 @@ div.tr-cont-bottom{
 }
 div.tr-cont-bottom span{
     font-size: 1rem;
+    color: gray;
+}
+div.tr-cont-bottom span svg{
+    font-size: 1rem;
+    color: gray;
 }
 
 /*fd-container*/
 div.fd-tit-box{
     display: grid;
-    grid-template-columns: 850px 100px ;
+    grid-template-columns: 900px 50px ;
 }
 span.fd-tit{
     padding: 0 30px 0 0;
@@ -325,6 +331,7 @@ span.fd-tit{
 span.fd-more-box{
     margin-top: 40px;
     margin-bottom: 20px;
+    text-align: right;
 }
 a.fd-more{
     font-size: 20px;
@@ -368,8 +375,14 @@ div.fd-card {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     padding: 10px 10px 10px 10px;
     margin-bottom: 30px;
+    background-color: white;
 }
 
+div.fd-card:hover {
+    -ms-transform: scale(1.1); /* IE 9 */
+    -webkit-transform: scale(1.1); /* Safari 3-8 */
+    transform: scale(1.1);
+}
 div.fd-txt-area:hover {
     cursor: pointer;
 }
@@ -386,11 +399,13 @@ div.fdi-nm {
     margin-bottom: 10px;
 }
 
-span.fd_cf_nm {
+.fd_cf_nm {
+    position: absolute;
+    margin-top: 8px;
     color: white;
-    font-size: 15px;
+    font-size: 0.8rem;
     margin-left: 5px;
-    padding: 10px 10px 10px 10px;
+    padding: 7px 10px 3px 7px;
     background-color: rgba(0,0,0,0.6);
     border-radius: 100px;
 }
