--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -4,13 +4,15 @@
     font-weight: normal;
     font-style: normal;
 }
-
+ul {
+    padding: 0;
+}
 
 div.main-page-container {
     display: grid;
-    width: 950px;
+    width: 1136px;
     grid-auto-rows: 1fr 300px 500px 400px;
-    grid-template-areas: 
+    grid-template-areas:
                 "best"
                 "loc"
                 "tr"
@@ -21,11 +23,14 @@ div.main-page-container {
 
 .cf-best-container {
     margin-top: 30px;
+    overflow: hidden;
+    position: relative;
     grid-area: best;
 }
 
 .loc-container {
     grid-area: loc;
+    margin-top: 30px;
 }
 
 .tr-container {
@@ -38,7 +43,7 @@ div.main-page-container {
 
 .tit {
     margin-top: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     height: 33px;
     line-height: 1.3;
     font-weight: 900;
@@ -52,8 +57,8 @@ div.main-page-container {
 
 .cf-img-box > img {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
+    width: 320px;
+    height: 240px;
 }
 
 .cf-lk-box:before {
@@ -85,17 +90,18 @@ i {
     font-style: normal;
 }
 
-span.cf-star-box > i {
-    margin-left: -3px;
-}
 
-.cf-img-box {
-    height: 368px;
-}
-
-.cf-cont-box {
+a.cf-cont-box {
     display: block;
-    margin-top: 22px;
+    padding: 23px;
+    border-radius: 12px;
+    border: 1px solid rgb(0 0 0 / 12%);
+}
+
+a.cf-cont-box .txt-info {
+    margin-top: 0;
+    padding-top: 16px;
+    text-align: left;
 }
 
 a {
@@ -105,23 +111,14 @@ a {
     box-sizing: border-box;
 }
 
-ul.swiper-wrapper {
-    width: 950px;
-    height: 600px;
-    padding: 0;
-}
-
-
 ul.swiper-wrapper li {
     list-style: none;
 }
 
-.cf-card {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-}
 
-p.cf-txt {
+span.cf-txt {
     margin-top: 16px;
+    margin-bottom: 16px;
     word-wrap: break-word;
     display: -webkit-box;
     -webkit-line-clamp: 3;
@@ -138,11 +135,6 @@ p.cf-txt {
     background-color: #664400 !important;
 }
 
-.loc-container {
-    display: flex;
-    align-items: center;
-
-}
 
 .quick-search {
     display: flex;
@@ -151,8 +143,8 @@ p.cf-txt {
 .quick-search a {
     display: block;
     min-width: 60px;
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 130px;
     border-radius: 50%;
     background: 50% 50% no-repeat;
     background-size: cover;
@@ -193,7 +185,6 @@ p.cf-txt {
 div.swiper-wrapper {
     width: 950px;
     padding: 0;
-    margin-left: 15px;
 }
 
 li{
