[Feat,Design] 10-16 5:45 PM Mypage,header
Mypage
- 투어플랜 Modal CSS 완료
- 참여중인 투어 일정 금일중으로 못하면 뺴거나 시연안할 예정

Header
- 세션주기 세션제거 주석처리

UserForm
- 버튼 디자인 수정
- 이메일 아이디 공백시 정상 인식 버그 수정

--- a/src/main/webapp/resources/css/cont_pl_style.css
+++ b/src/main/webapp/resources/css/cont_pl_style.css
@@ -10,7 +10,7 @@
 
 div.bk-card {
     width: 270px;
-    height: 270px;
+    height: 280px;
     overflow: hidden;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
@@ -66,4 +66,52 @@ div.bk-txt-area:hover {
 .page-item.active .page-link {
     background-color: #664400;
     border-color: #664400;
+}
+
+.pl-md-head {
+    padding: 15px;
+}
+
+.pl_md_body {
+    padding: 10px;
+}
+
+.pl_md_date {
+    margin-bottom: 10px;
+}
+
+.pl-md-detail {
+    display: grid;
+}
+
+.pl_detail_date {
+    display: grid;
+    border: 1px solid rgba(0, 0, 0, 0.16);
+    padding: 20px;
+    gap: 10px;
+}
+
+.pl_detail_time {
+    display: grid;
+    grid-template-areas:
+            "cf_img cf_nm"
+            "cf_img v_time";
+    grid-template-columns: 80px 1fr;
+}
+
+.pl_cf_img {
+    grid-area: cf_img;
+}
+
+.pl_cf_nm {
+    grid-area: cf_nm;
+}
+
+.pl_v_time {
+    grid-area: v_time;
+}
+
+span.pl-cf-nm:hover {
+    text-decoration: rgba(50, 50, 93, 0.25) underline;
+    text-underline-position: under;
 }
