[Fix] (노유선) 메인페이지 오류 수정

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -283,6 +283,10 @@ span.tr-cont-tw-r{
 .tr-cont-tit{
     text-align: center;
     font-size: 1.5rem;
+    text-overflow:ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    margin-bottom: 15px;
 }
 
 img.tr-prf{
